syntax = "proto3";
package protobuf;
option go_package = "pb/protobuf";

message KVResponse {
    uint32 errCode = 1;
    optional bytes value = 2;
    optional int32 pid = 3;
    optional int32 version = 4;
    optional int32 overloadWaitTime = 5;
    optional int32 membershipCount = 6;
    optional uint32 kvSize = 7;
    optional string cluster = 8;

    bool receiveData = 9;
}
